# secretary

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  compose.yaml  pyproject.toml  requirements.txt  telezombie.example.yaml
.github/workflows/: unit-test.yaml
bot/: __main__.py  _lib.py  _main.py  _types.py  context.py  db.py  fetch.py  lib.py  main.py  settings.py  types.py
bot/_av/: dmm.py  mgstage.py
bot/_cmd/: av.py
bot/_handlers/: av.py  text_message.py
bot/_url/: _lib.py  dmm.py  mgstage.py
bot/avid/: dmm.py  fc2.py
bot/daemon/: api.py  bot.py  polling.py
bot/handlers/: _lib.py  _url.py  avid.py  callback_query.py  command.py  lib.py  message.py  text_api.py  text_message.py  types.py  url.py  webhook.py
bot/integrations/: duld.py
bot/lib/: keyboard.py  url.py
bot/lib/fetch/: __init__.py  aio.py  curl.py
bot/processors/: pipeline.py
bot/processors/content/: jav.py  nh.py  twitter.py
bot/processors/content/sites/: __init__.py  dlsite.py  dmm.py  mgstage.py  nh.py  nyaa.py
bot/text/: _avid.py  _lib.py  _twitter.py  lib.py  types.py
bot/text/_url/: __init__.py  dlsite.py  dmm.py  mgstage.py  nyaa.py
bot/text/avid/: __init__.py  dmm.py  fc2.py
bot/text/url/: __init__.py  dlsite.py  dmm.py
bot/types/: answer.py  callback.py  json.py
bot/url/: dlsite.py  dmm.py  lib.py  mgstage.py
