[project]
name = "secretary"
version = "0.1.0"
description = "Telegram Secretary Bot"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohttp>=3.11.11,<4.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "python-telegram-bot[callback-data]>=21.10,<22.0",
    "wcpan-jav>=0.2.4,<1.0.0",
    "wcpan-logging>=2.1.0,<3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2,<1.0.0",
    "wcpan-watchdog>=1.2.1,<2.0.0",
]
